--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -76,10 +76,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
-						<!--  map  -->
-						<!-- The element that will contain our Google Map. This is used in both the Javascript and CSS above. -->
-						<div id="map"></div>
-						<!--  /map  -->
+						<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62651725.42841632!2d43.66028627185195!3d16.578629158326283!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30635ff06b92b791%3A0xd78c4fa1854213a6!2sIndia!5e0!3m2!1sen!2sin!4v1512727080247" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 					</div>
 
 				</div>
